update exam state in grading domain
