# internal/examination/app/query/types.go
@@ -4,7 +4,7 @@ type Exam struct {
 	ExamId            string
 	LibraryExamId     string
 	StudentId         string
-	Completed         bool
+	State             string
 	AnsweredQuestions int32
 	TotalQuestions    int32
 	Questions         []Question
